#10 fix: DraggleMenuTrigger 컴포넌트를 main으로 옮기고, z-index를 추가
- 도감 컴포넌트에 가려지지 않도록 z-index 추가
- modal의 z-index와 구별되도록 tailwind 유틸리티 클래스 추가

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -6,4 +6,10 @@
   .backdrop {
     @apply fixed top-0 left-0 h-[100dvh] w-[100dvw];
   }
+  .draggable-z-index {
+    z-index: 1;
+  }
+  .modal-z-index {
+    z-index: 2;
+  }
 }
